<resources>
    <string name="app_name">Vamos</string>
    <string name="app_image">app image</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Username">User Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Re_Password">RePassword</string>
    <string name="Sex">Sex</string>
    <string name="Age">Your Age</string>
    <string name="Family">Family</string>
    <string name="job">Your Job</string>
    <string name="Money">Salary</string>
    <string name="Edit_Text"></string>
    <string name="Surname"><b>Surname</b></string>
    <string name="Address"><b>Address</b></string>
    <string name="Post_Code"><b>Post Code</b></string>
    <string name="Gender"><b>Gender </b></string>
    <string name="Affiliation"><b>Affiliation </b></string>
    <string name="Cancel"><b>Cancel</b></string>
    <string name="Reset"><b>Reset</b></string>
    <string name="Back">Back</string>
    <string name="Next"><b>Next</b></string>
    <string name="Exit"> Exit </string>
    <string name="log_out">Log out</string>
    <string name="Update">Update</string>
    <string name="test_again">Test Again \u0020 </string>
    <string name="User_Page">User Page \u0020</string>
    <string name="Second_Page"><b>Second_Page</b></string>
    <string name="Switch_Back"><b>Switch Back to Activity 1</b></string>
    <string name="welcome">\u0020\u0020 Welcome \u0020\u0020\u0020\u0020</string>
    <string name="go_to_test">Go to test</string>
    <string name="Show_last_test">Show last test</string>
    <string name="Change_The_Data">Change The Data</string>
    <string name="ok_install_data">OK Install to Data</string>
    <string name="delete">Delete user</string>
    <string name="show_db">show db</string>
    <string name="finish">Finish</string>
    <string name="viewAll">View All</string>
    <string name="ok">OK</string>
    <string name="ok_update">OK Update</string>
    <string name="welcome_list"> Please fill in the following information to complete your writting</string>
    <string name="welcome_show"> Υour check through the data before REGISTRATION</string>
    <string name="install_data">install data</string>
    <string name="text1">text 1</string>
    <string name="welcome_Update">Enter the data you want to change</string>
    <string name="Delete_Test">Delete Test</string>
    <string name="dont">Not Found Any Saved Test</string>
    <string name="Error_Pass_rePass"> the Password is not the same as the Re-Password</string>
    <string name="Error_Empty_First_Name">Error the First Name is Empty</string>
    <string name="Error_Empty_Last_Name">Error the Last Name is Empty</string>
    <string name="Error_Empty_Username">Error the Username is Empty</string>
    <string name="Error_Empty_Password">Error the Password is Empty</string>
    <string name="Error_Empty_Re_Password">Error the Re-Password is Empty</string>
    <string name="Error_Empty_Email">Error the Email is Empty</string>
    <string name="Error_Empty_Age">The Age is Empty</string>
    <string name="Error_Empty_job">The Job is Empty</string>
    <string name="Error_Empty_Money">The Money is Empty</string>
    <string name="Error_Empty_Sex">The Sex is Empty</string>
    <string name="Error_Empty_Family">The Family is Empty</string>
    <string name="Error_Email">The Email is Error..</string>
    <string name="error_install">Error.. Not Install User</string>
    <string name="RadioButtonMale">Male</string>
    <string name="RadioButtonFemale">Female</string>
    <string name="familyYes">Family Yes</string>
    <string name="familyNo">Family No</string>
    <string name="A"><b> A </b></string>
    <string name="B"><b> B </b></string>
    <string name="C"><b> C </b></string>
    <string name="D"><b> D </b></string>
    <string name="Check_A">Check A is selected</string>
    <string name="Check_B">Check B is selected</string>
    <string name="Check_C">Check C is selected</string>
    <string name="Check_D">Check D is selected</string>
    <string name="en">English</string>
    <string name="gr">Greece</string>
    <string name="Enter_your_FName">\u0020\u0020Enter your First Name</string>
    <string name="Enter_your_LName">\u0020\u0020Enter your Last Name</string>
    <string name="Enter_your_UName">\u0020\u0020Enter your UserName</string>
    <string name="Enter_your_Password">\u0020\u0020Enter your Password</string>
    <string name="Enter_your_RPassword">\u0020\u0020Enter your RePassword</string>
    <string name="Enter_your_Email">\u0020\u0020Enter your Email</string>
    <string name="Enter_your_Age">\u0020\u0020Enter your Age</string>
    <string name="Enter_your_Job">\u0020\u0020Enter your Job</string>
    <string name="Enter_your_Money">\u0020\u0020Enter your Money</string>
    <string name="log_in"> Log In </string>
    <string name="Email_example"> email@example.com </string>
    <string name="pass"> password </string>
    <string name="sing_up"> sigη up </string>
    <string name="title_activity_list_user">List user</string>
    <string name="title_activity_list2_user">List2 user</string>
    <string name="title_activity_login_user">Login user</string>
    <string name="title_activity_help1">Help </string>
    <string name="title_activity_show_before_install">Show before install</string>
    <string name="title_activity_update_user">Update user</string>
    <string name="title_activity_test1">Test</string>
    <string name="title_activity_show__answer">Show Answer</string>
    <string name="title_activity_show_before_test">Show before test</string>
    <string name="descriptionimage">description image for Vamos</string>
    <string name="Before_Test1">        Mountain or sea? Greece or abroad? Partying or Extreme sports; With your mates or new friends?
Many dilemmas, but even more options for your vacation. It is time to decide the destination of your journey after the necessary negotiations and chaotic counterproposals from friends or your own?
We remove from the predicament and within eight questions limit your choices to the most suitable to match what you have in your mind.
</string>
    <string name="Before_Test2">        Mountain or sea? Aegean or Ionianor? Greece or abroad? Family fun or calm? With your other half or with your friends?
        Many dilemmas, but even more options for your summer holidays. Approximately such a time, moreover, there is always this talk with your partner at home, to decide the destination of the journey after the necessary negotiations.
         We remove from the predicament and within eight questions limit your choices to the most suitable to match what you have in mind as an ideal holiday.
</string>
<string name="Before_Test3">        Mountain or sea? Aegean or Ionianor? In town or village? Family fun or calm? With your partner or with your friends? 
        Many dilemmas, but even more options for your summer holidays. We remove from the predicament and within eight questions limit your choices to the most suitable to match what you have in your mind as "perfect holiday."
</string>
    <string name="question1"> 1. Which of the following pictures are closer to what comes to your mind when you hear "summer vacation" ? </string>
    <string name="question2"> 2. Who will be going on holiday ?   </string>
    <string name="question3"> 3. What means of transport do you prefer ?  </string>
    <string name="question4"> 4. For swimming you can choose ?  </string>
    <string name="question5"> 5. Where do you prefer to stay overnight ?  </string>
    <string name="question6"> 6. What gadgets will not be missing from your luggage ? </string>
    <string name="question7"> 7. After the holiday, the profile picture on Facebook will be ?  </string>
    <string name="question8"> 8. When would prefer to go on holiday ?  </string>
    <string name="answer1aN"> 1.A. \n Beach bar, dance till morning and flirting on the beach  </string>
    <string name="answer1bN"> 1.B. \n Cool breeze, in a picturesque place </string>
    <string name="answer1cN"> 1.C. \n Day and night to the secluded beach all day with only a bathing suit, or without it </string>
    <string name="answer1dN"> 1.D. \n Far be yes, and where to be </string>
    <string name="answer2aN"> 2.A. \n With his or her buddy or it happens to be like you, single </string>
    <string name="answer2bN"> 2.B. \n With his or her buddy or you happen to have a partner and children  </string>
    <string name="answer2cN"> 2.C. \n With some friends, and some friends of friends, maybe some friends of friends of friends  </string>
    <string name="answer2dN"> 2.D. \n With your close friends </string>
    <string name="answer3aN"> 3.A. \n Speed ferry forever! </string>
    <string name="answer3bN"> 3.B. \n As the independence and security of your car does not have  </string>
    <string name="answer3cN"> 3.C. \n And with boat go as long as you leave the city  </string>
    <string name="answer3dN"> 3.D. \n Plane or train  </string>
    <string name="answer4aN"> 4.A. \n Measurement Understood organized beach with nice music  </string>
    <string name="answer4bN"> 4.B. \n Shallow sand - do not know good swimming  </string>
    <string name="answer4cN"> 4.C. \n Free beach, preferably deserted and unknown to the crowds  </string>
    <string name="answer4dN"> 4.D. \n Well, if you do not pop bathroom very </string>
    <string name="answer5aN"> 5.A. \n In a hotel  </string>
    <string name="answer5bN"> 5.B. \n In apartment equipped Barbecue </string>
    <string name="answer5cN"> 5.C. \n In your tent on a beach </string>
    <string name="answer5dN"> 5.D. \n In hostel or member couch AirBNB  </string>
    <string name="answer6aN"> 6.A. \n Smartphone, tablet, laptop, Phone hub and portable icheiakia </string>
    <string name="answer6bN"> 6.B. \n The snake mosquito </string>
    <string name="answer6cN"> 6.C. \n At most a cell, and this closed  </string>
    <string name="answer6dN"> 6.D. \n Smartphone With good camera or, even better, SLR camera  </string>
    <string name="answer7aN"> 7.A. \n You with perfect tan and your hip swimwear and racket</string>
    <string name="answer7bN"> 7.B. \n A nice landscape of the most picturesque hamlet visited the island </string>
    <string name="answer7cN"> 7.C. \n A piece of sandy beach or a detail from your favorite beach without showing your face  </string>
    <string name="answer7dN"> 7.D. \n The panorama of a city or a world-renowned attraction  </string>
    <string name="answer8aN"> 8.A. \n In August </string>
    <string name="answer8bN"> 8.B. \n On July </string>
    <string name="answer8cN"> 8.C. \n In July or September </string>
    <string name="answer8dN"> 8.D. \n You have no particular preference, whenever you find cheaper ticket  </string>
    <string name="answer1aP"> 1.A. \n Dancing, good food and relaxing on the beach  </string>
    <string name="answer1bP"> 1.B. \n Cool breeze under a tree hug to your mate in a picturesque hamlet </string>
    <string name="answer1cP"> 1.C. \n Day and night on a secluded beach all day with your other half </string>
    <string name="answer1dP"> 1.D  \n Far be yes, and where to be </string>
    <string name="answer2aP"> 2.A. \n With his or her partner ONLY  </string>
    <string name="answer2bP"> 2.B. \n With his or her partner and children </string>
    <string name="answer2cP"> 2.C. \n With some friends  </string>
    <string name="answer2dP"> 2.D. \n With your close friends  </string>
    <string name="answer3aP"> 3.A. \n Speed ferry forever! </string>
    <string name="answer3bP"> 3.B. \n As the independence and security of your car does not have </string>
    <string name="answer3cP"> 3.C. \n And with boat go as long as you leave the city </string>
</resources>