<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	android:scrollbars="none" >


<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vamos.MainActivity" 
    android:background="@color/green" >

 
 <GridLayout
        android:id="@+id/language"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/test_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:columnCount="2" >

        <Button
            android:id="@+id/eng"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:background="@drawable/date_design"
            android:drawableLeft="@drawable/united_kingdom"
            android:drawableStart="@drawable/united_kingdom"
            android:gravity="center"
            android:text="@string/en"
            android:textColor="@color/title" />     
        
        <Button
            android:id="@+id/gr"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_marginLeft="94dp"
            android:layout_marginStart="94dp" 
            android:layout_row="0"
            android:background="@drawable/user_design"
            android:drawableLeft="@drawable/greece"
            android:drawableStart="@drawable/greece"
            android:gravity="center"
            android:text="@string/gr"
            android:textColor="@color/title" />
    
    </GridLayout>
 

 <EditText
     android:id="@+id/Edit_Text_email"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/language"
     android:layout_centerHorizontal="true"
     android:inputType="textEmailAddress"
     android:layout_marginTop="48dp"
     android:gravity="center" 
     android:hint="@string/Email_example" 
     android:drawableLeft="@drawable/user"
     android:drawableStart="@drawable/user"
     android:ems="10" />

 
 <EditText
     android:id="@+id/Edit_Text_pass"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/Edit_Text_email"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="10dp"
     android:gravity="center" 
	 android:inputType="textPassword"
	 android:hint="@string/pass" 
	 android:drawableLeft="@drawable/key"
	 android:drawableStart="@drawable/key" 
     android:ems="10" />
 
 <Button
     android:id="@+id/log_in"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/Edit_Text_pass"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="10dp"
     android:text="@string/log_in"
     android:background="@drawable/button_send"  
     android:drawableRight="@drawable/password"
     android:drawableEnd="@drawable/password" 
      />
  
 <Button
     android:id="@+id/sing_up"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/log_in"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="20dp"
     android:text="@string/sing_up"
     android:background="@drawable/button_sing_up"
     android:drawableRight="@drawable/log_up"
     android:drawableEnd="@drawable/log_up" 
      />
 
 <ImageView
     android:id="@+id/test_image"
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="50dp"
     android:contentDescription="@string/app_image"
     android:src="@drawable/app_image" />

 <TextView
     android:id="@+id/AppName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="22dp"
     android:text="@string/app_name"
     android:textStyle="bold"
     android:textSize="30sp"
     />
 
</RelativeLayout>
</ScrollView>